# avicalc_android

./: .gitmodules  .project  README.md  build.gradle  settings.gradle  tags
app/: build.gradle
app/src/androidTest/java/com/veezard/avicalc/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/veezard/avicalc/: GuiHelpers.java  Help.java  JniInterfacingConstants.java  MainActivity.java  RustGlue.java
app/src/main/res/drawable/: button.xml  button_assign.xml  button_assign_pressed.xml  button_assignable_variable.xml  button_calculated_variable.xml  button_conv.xml  button_conv_pressed.xml  button_help.xml  button_help_close.xml  button_help_pressed.xml  entry_field_background.xml  help_window.xml  lower_part_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-anydpi-v26/: icon.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-h1024dp/: styles.xml
app/src/main/res/values-h700dp/: styles.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/android_glue/: Cargo.toml
app/src/main/rust/android_glue/src/: lib.rs
app/src/test/java/com/veezard/avicalc/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
